--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.21.2",
+        "vue-multiselect": "^2.1.6"
     }
 }
